[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["aisaev <an.isaev7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.98.0"
uvicorn = "^0.22.0"
websockets = "^11.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
